<resources>
    <string name="app_name">EjemploClase</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nuevo_personaje">Agregar</string>
    <string name="nombre_canal">Canal de nofiticaciones</string>
    <string name="descripcion_canal">Canal para poder utilizar notificaciones en nuestra aplicación</string>
    <string name="crearPersonajeTitulo">Nuevo personaje</string>
    <string name="form_personaje_nombre">Nombre del Personaje</string>
    <string name="form_personaje_poder">Poder</string>
    <string name="form_personaje_descripcion">Descripción</string>
    <string name="form_personaje_fuerza">Fuerza</string>
    <string name="form_personaje_agilidad">Agilidad</string>
    <string name="boton_editar">Editar</string>
    <string name="boton_eliminar">Eliminar</string>
</resources>