<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="450dp"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/crearPersonajeTitulo"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_personaje_nombre"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        tools:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editTextPoder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_personaje_poder"
        android:inputType="text"
        android:textColor="@color/white"
        tools:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editTextDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_personaje_descripcion"
        android:inputType="text"
        android:textColor="@color/white"
        tools:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editTextFuerza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_personaje_fuerza"
        android:inputType="number"
        android:textColor="@color/white"
        tools:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editTextAgilidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_personaje_agilidad"
        android:inputType="number"
        android:textColor="@color/white"
        tools:textColorHint="@color/white" />

    <ImageView
        android:id="@+id/imagenPersonaje"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        app:srcCompat="@drawable/ironman"
        tools:textColorHint="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#3E80B4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_crear"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="Crear"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="Cancelar"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>